@@ -1,11 +1,11 @@
-.TH fimgs 1 "(c) 2007-2022 Michele Martone"
+.TH fimgs 1 "(c) 2007-2023 Michele Martone"
 .SH NAME
 fimgs - poor man's [http://]PostScript/pdf/dvi/cbr/rar/cbz/zip viewer based on fim
 .SH SYNOPSIS
 .B fimgs [ {fimgs-options} ] file [-- [{fim-options}]]
 .SH DESCRIPTION
 .B fimgs  
-is a wrapper script which takes a PostScript or pdf or .cbr or .rar or .cbz or .zip or .dvi or any of the above prefixed with http:// or https:// or ssh:// as input, renders the pages using ghostscript into a temporary directory and finally calls \fB fim\fP to display them.
+is a wrapper script which takes a PostScript or pdf or .cbr or .rar or .cbz or .zip or .dvi or any of the above prefixed with http:// or https:// or ssh: as input, renders the pages using ghostscript into a temporary directory and finally calls \fB fim\fP to display them.
 
 In case of compressed archives (in ZIP or RAR formats), the images are decompressed into a directory and displayed using \fB fim\fP.
 In this case, only images contained in the archive will be displayed (no nested archives or pdf's or ps's or dvi's).
@@ -22,6 +22,8 @@ In order to uncompress ZIP archives, fimgs will use 'zip'.
 In order to uncompress TAR.GZ or TAR.BZ2 or TAR.XZ archives, fimgs will use 'tar'.
 
 In order to fetch http:// or https:// prefixed URLS, 'wget' will be used.
+
+In order to fetch ssh: prefixed host:path locations, 'scp' will be used.
 
 In case of a CBZ, CBR, PDF, PS, or DVI file, will invoke \fB fim\fP with '--autotop --autowidth'.
 
